k8s/buildctl-deployment.yml
# Buildctl Deployment ==========================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pullr-buildctl
  labels:
    app: pullr
    tier: backend
    impl: buildctl
spec:
  selector:
    matchLabels:
      app: pullr
      tier: backend
      impl: buildctl
  replicas: 1
  template:
    metadata:
      labels:
        app: pullr
        tier: backend
        impl: buildctl
    spec:
      containers:
        - name: docker
          image: docker:17.12.0-dind
          args:
            - "--insecure-registry"
            - "docker-registry:5050"
          securityContext:
            privileged: true
          volumeMounts:
            - name: docker-storage
              mountPath: /var/lib/docker
        - name: buildctl
          image: mobingilabs/pullr-buildctl:localdev
          args: ['listen']
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: conf
              mountPath: /conf

      volumes:
        - name: docker-storage
          emptyDir: {}
        - name: conf
          configMap:
            name: pullr
