k8s/apisrv-deployment.yml
# Apisrv Service ===============================================================
apiVersion: v1
kind: Service
metadata:
  name: pullr-apisrv
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: pullr
    tier: backend
    impl: apisrv
---
# Apisrv Deployment ============================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pullr-apisrv
  labels:
    app: pullr
    tier: backend
    impl: apisrv
spec:
  selector:
    matchLabels:
      app: pullr
      tier: backend
      impl: apisrv
  replicas: 2
  template:
    metadata:
      labels:
        app: pullr
        tier: backend
        impl: apisrv
    spec:
      containers:
        - name: apisrv
          image: mobingilabs/pullr-apisrv:localdev
          args: ['serve']
          resources:
            requests:
              cpu: 100m
              memory: 100Mi

          ports:
            - containerPort: 8080

          volumeMounts:
            - name: secrets
              mountPath: /certs
            - name: conf
              mountPath: /conf

      volumes:
        - name: secrets
          secret:
            secretName: pullr

        - name: conf
          configMap:
            name: pullr
