k8s/ui-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: pullr-ui
  labels:
    app: pullr
    tier: frontend
    impl: ui
spec:
  ports:
    - name: ui
      port: 80
  selector:
    app: pullr
    tier: frontend
    impl: ui
---
# UI Deployment ================================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pullr-ui
  labels:
    app: pullr
    tier: frontend
    impl: ui
spec:
  selector:
    matchLabels:
      app: pullr
      tier: frontend
      impl: ui
  template:
    metadata:
      labels:
        app: pullr
        tier: frontend
        impl: ui
    spec:
      containers:
        - name: ui
          image: mobingilabs/pullr-ui:localdev
          ports:
            - containerPort: 80
