k8s/pullr-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pullr-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 8080
  rules:
  - host: api.pullr.local
    http:
      paths:
      - backend:
          serviceName: pullr-apisrv
          servicePort: 8080
  - host: pullr.local
    http:
      paths:
      - backend:
          serviceName: pullr-ui
          servicePort: 80
  - host: events.pullr.local
    http:
      paths:
      - backend:
          serviceName: pullr-eventsrv
          servicePort: 8181
  - host: reg.pullr.local
    http:
      paths:
      - path: /tokensrv
        backend:
          serviceName: docker-registry
          servicePort: 5001
      - backend:
          serviceName: docker-registry
          servicePort: 5000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: default-http-backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pullr
        impl: default-http-backend
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: default-http-backend
        # Any image is permissable as long as:
        # 1. It serves a 404 page at /
        # 2. It serves 200 on a /healthz endpoint
        image: gcr.io/google_containers/defaultbackend:1.0
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi
---
kind: Service
apiVersion: v1
metadata:
  name: default-http-backend
spec:
  selector:
    app: pullr
    impl: default-http-backend
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
